--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,91 +1,82 @@
 html {
-  --text-prmary: #FFFFFF;
-  --text-default: #8C93A8;
-  --button-bg: #3F4B6D;
-  --button-primary: #F2BF83;
-  --button-primary--hover: #fcdab2;
-  --bg: #192852;
-  --bg-dark: #15244B;
-  --bg-footer: #0D193A;
+    --text-prmary: #FFFFFF;
+    --text-default: #8C93A8;
+    --button-bg: #3F4B6D;
+    --button-primary: #F2BF83;
+    --button-primary--hover: #fcdab2;
+    --bg: #192852;
+    --bg-dark: #15244B;
+    --bg-footer: #0D193A;
 }
-
 html body {
-  font-family: 'Source Sans Pro';
-  background-color: var(--bg);
-  color: var(--text-default);
+    font-family: 'Source Sans Pro';
+    background-color: var(--bg);
+    color: var(--text-default);
 }
-
-
 .tab {
-  overflow: hidden;
-  position: fixed;
-  background-color: #192852;
+    overflow: hidden;
+    position: fixed;
+    background-color: #192852;
 }
 .tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  font-weight: bolder;
-  color: #ffffff;
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-weight: bolder;
+    color: #ffffff;
 }
 .tab button:hover {
-  border-bottom: 5px solid currentColor;
+    border-bottom: 5px solid currentColor;
 }
 .tab button.active {
-  border-bottom: 5px solid currentColor;
+    border-bottom: 5px solid currentColor;
 }
 .tabcontent {
-  display: none;
-  padding: 30px 0px;
-  border-top: none;
+    display: none;
+    padding: 30px 0px;
+    border-top: none;
 }
-
 .selector {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-
 .title-selecter {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2%;
 }
-
 .title-selecter a{
-  text-decoration: none;
-  width: 32%;
-  margin-bottom: 10px;
+    text-decoration: none;
+    width: 32%;
+    margin-bottom: 10px;
 }
-
 .title-selecter img {
-  width: 100%;
-  border-radius: 10px;
-  object-fit: cover;
-  height: 100px;
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    height: 100px;
 }
-
 .title-selecter .title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-          line-clamp: 2; 
-  -webkit-box-orient: vertical;
-  color: #ffffff;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    color: #ffffff;
 }
 .title-selecter .info {
-  color: #8C93A8;
+    color: #8C93A8;
 }
-
-
 footer {
     min-height: 50px;
     padding-top: 5px;
     padding-bottom: 5px;
-    background-color: #0D193A;;
+    background-color: #0D193A;
+   ;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -93,7 +84,6 @@ footer {
     width: 100%;
     z-index: 10;
 }
-
 footer .buttons {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -113,7 +103,6 @@ footer .buttons {
     position: relative;
     margin: 0 auto;
 }
-
 footer .points-button {
     display: flex;
     border: none;
@@ -123,15 +112,11 @@ footer .points-button {
     flex-direction: column;
     align-items: center;
 }
-
 /*профиль*/
-
-
 .profile-info {
     display: flex;
     width: 100%;
 }
-
 .profile-info img{
     width: 100%;
     border-radius: 50%;
@@ -155,15 +140,13 @@ footer .points-button {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 3;
-            line-clamp: 3; 
+    line-clamp: 3;
     -webkit-box-orient: vertical;
 }
-
 .profile-online {
     font-size: 15px;
     margin-bottom: 10px;
 }
-
 .profile-edit-btn {
     display: flex;
     width: 100%;
@@ -177,14 +160,13 @@ footer .points-button {
     color: #FFFFFF;
 }
 hr {
-  height: 1px;
-  border: 0;
-  background-color: rgba(255, 255, 255, 0.2);
+    height: 1px;
+    border: 0;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 .profile {
     margin-top: 20px;
 }
-
 .edit {
     position: fixed;
     left: 0;
@@ -192,6 +174,7 @@ hr {
     height: 100%;
     background-color: #192852;
     overflow: auto;
+    top: 0;
 }
 .edit-syze {
     margin-left: 2%;
@@ -202,7 +185,6 @@ hr {
     text-decoration: none;
     color: #FFFFFF;
 }
-
 .edit-info {
     display: flex;
     flex-direction: column;
@@ -211,14 +193,14 @@ hr {
     color: #FFFFFF;
 }
 .edit-info input {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
-  width: 90%;
-  border: 0;
-  color: #FFFFFF;
-  padding: 5px;
-  outline: none;
-  margin-bottom: 10px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+    width: 90%;
+    border: 0;
+    color: #FFFFFF;
+    padding: 5px;
+    outline: none;
+    margin-bottom: 10px;
 }
 .edit-info button {
     background: rgba(255, 255, 255, 0.2);
@@ -227,12 +209,9 @@ hr {
     color: #FFFFFF;
     padding: 5px;
     outline: none;
-    margin-bottom: 20px;   
+    margin-bottom: 20px;
 }
-
-
 /*страница аниме*/
-
 .anime-poster {
     display: flex;
     justify-content: center;
@@ -241,7 +220,6 @@ hr {
     border-radius: 10px;
     width: 60%;
 }
-
 .anime-background {
     filter: blur(5px);
     width: 100%;
@@ -262,7 +240,7 @@ hr {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
-            line-clamp: 2; 
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 .title-tr {
@@ -271,7 +249,6 @@ hr {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
 .play-btn {
     display: flex;
     width: 100%;
@@ -279,6 +256,7 @@ hr {
     background: #FF8A00;
     border-radius: 5px;
     text-decoration: none;
+    margin-bottom: 10px;
 }
 .play-btn div {
     padding: 5px;
@@ -303,4 +281,109 @@ hr {
 }
 .episode-selecter {
     margin-bottom: 40px;
+}
+.anime-info-text {
+    color: #ffffff;
+}
+.genres{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.genres a {
+    color: #FFFFFF;
+}
+.show_description {
+    background: rgba(217, 217, 217, 0.2);
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+    color: #FFFFFF;
+}
+.description-size {
+    display: flex;
+    justify-content: center;
+    flex-direction: column 
+}
+.comments {
+    display: flex;
+}
+.comments-all {
+    width: 100%;
+    margin-bottom: 20px;
+}
+.comments-title {
+    color: #FFFFFF;
+}
+.commentss {
+    margin-bottom: 10px;
+}
+.comments-sort {
+    margin-bottom: 20px;
+}
+.comments-sort .select {
+    background: rgba(217, 217, 217, 0.2);
+    border-radius: 5px;
+    padding: 4px;
+}
+#comments {
+    width: 93%;
+    background: #15244B;
+    border-radius: 5px;
+    outline: none;
+    border: 0;
+    resize: none;
+    padding: 10px;
+    color: #FFFFFF;
+}
+#comments::-webkit-scrollbar {
+    width: 0px;
+}
+.comments-btn {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+}
+.comments-btn #clear {
+    background: #15244B;
+    border-radius: 5px;
+    color: #FFFFFF;
+    border: 0;
+}
+.comments-btn .submit {
+    background: rgba(217, 217, 217, 0.2);
+    border-radius: 5px;
+    color: #FFFFFF;
+    border: 0;
+    margin-left: 5px;
+}
+.comments-autor {
+    display: flex;
+    margin-bottom: 10px;
+}
+.comments-avatar {
+    border-radius: 50%;
+    width: 15%;
+}
+.comments-info {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+}
+.comments-name {
+    color: #FFFFFF;
+}
+.comments-rating {
+    margin: auto;
+    margin-right: 0;
+}
+.comments-text {
+    margin-bottom: 10px;
+}
+.comments-reply {
+    color: #FFFFFF;
+}
+.back {
+    background-color: #0D193A;
+    padding: 3px;
+    border-radius: 5px;
 }
