--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,6 @@ footer .points-button {
     flex-direction: column;
     align-items: center;
 }
-/*профиль*/
 .profile-info {
     display: flex;
     width: 100%;
@@ -192,13 +191,17 @@ hr {
     display: flex;
     flex-direction: column;
 }
+.edit-info-save {
+    display: flex;
+    justify-content: space-between
+}
 .edit-info span {
     color: #FFFFFF;
 }
 .edit-info input {
     background: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
-    width: 90%;
+    width: 98%;
     border: 0;
     color: #FFFFFF;
     padding: 5px;
@@ -214,7 +217,6 @@ hr {
     outline: none;
     margin-bottom: 20px;
 }
-/*страница аниме*/
 .anime-poster {
     display: flex;
     justify-content: center;
@@ -282,6 +284,7 @@ hr {
 }
 .episode-sel {
     font-size: 20px;
+    margin-top: 10px;
 }
 .episode-selecter {
     margin-bottom: 40px;
