--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,16 @@ hr {
     outline: none;
     margin-bottom: 10px;
 }
+.edit-info textarea {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+    width: 98%;
+    border: 0;
+    color: #FFFFFF;
+    padding: 5px;
+    outline: none;
+    margin-bottom: 10px;
+  }
 .edit-info button {
     background: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
