--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,9 @@ footer .points-button {
     flex-direction: column;
     align-items: center;
 }
+footer .points-button small {
+    letter-spacing: 1px;
+}
 .profile-info {
     display: flex;
     width: 100%;
