--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,3 +526,67 @@ hr {
     border-radius: 50%;
     margin-top: 10px;
 }
+
+
+
+.trailer-anime {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    top: 0;
+    z-index: -1;
+}
+.trailer1 {
+    backdrop-filter: blur(100px);
+}
+  .trailer2{
+    width: 100%;
+    position: relative;
+    padding-top: 100%;
+  }
+   
+  .trailer3 img{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 90%;
+    border: none;
+    pointer-events: none;
+    user-select: none;
+    object-fit: cover;
+    filter: blur(4px);
+  }
+
+  .trailer1::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 156px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#192852), to(rgba(24, 38, 80, 0)));
+    background: linear-gradient(180deg, #192852 0%, rgba(24, 38, 80, 0) 100%);
+    z-index: 5;
+    pointer-events: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+  
+  .trailer1::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 392px;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(24, 38, 80, 0)), color-stop(58.85%, rgba(24, 39, 81, 0.64)), to(#192852));
+    background: linear-gradient(180deg, rgba(24, 38, 80, 0) 0%, rgba(24, 39, 81, 0.64) 58.85%, #192852 100%);
+    z-index: 5;
+    pointer-events: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
