--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,8 +237,11 @@ hr {
     display: flex;
     justify-content: center;
 }
-.anime-poster img {
+.anime-poster a {
     width: 70%;
+}
+.anime-poster img {
+    width: 100%;
     border-radius: 10px;
     object-fit: cover;
     aspect-ratio: 9/13;
