--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,7 +537,7 @@ hr {
     left: 0;
     width: 100%;
     top: 0;
-    z-index: -1;
+    z-index: -2;
 }
 .trailer1 {
     backdrop-filter: blur(100px);
@@ -642,3 +642,22 @@ hr {
 .about-open {
     width: 100%;
 }
+
+
+.png-tyan {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    left: 0;
+    z-index: -1;
+  }
+  .png-tyan-img {
+    width: 15%;
+    display: flex;
+    padding: 10px;
+    margin-top: 120px;
+  }
+  .png-tyan-img img {
+    width: 100%;
+    object-fit: cover;
+  }
